<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

    <android.support.constraint.Guideline
            android:id="@+id/horizontalGuidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"/>

    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verticalGuideline"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical" />

    <android.support.constraint.Guideline
            android:id="@+id/horizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.52"/>

    <ProgressBar
            android:elevation="11dp"
            android:visibility="gone"
            android:id="@+id/loginProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:elevation="11dp"
            android:id="@+id/appLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuidelineTop"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
            app:layout_constraintTop_toTopOf="@+id/horizontalGuidelineTop"
            app:srcCompat="@mipmap/ic_launcher_round"
            tools:ignore="ContentDescription"/>

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontalGuidelineTop" app:layout_constraintHorizontal_bias="0.0">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title_1"
                android:textSize="16sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/login_title_2"
                android:textSize="16sp"
                android:textStyle="bold"/>
    </LinearLayout>

    <ImageView
            android:id="@+id/btnFacebookLogin"
            android:layout_width="263dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnGoogleLogin"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.81"
            app:srcCompat="@drawable/facebook_button"
            tools:ignore="ContentDescription"/>

    <ImageView
            android:id="@+id/btnGoogleLogin"
            android:layout_width="263dp"
            android:layout_height="53dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
            app:srcCompat="@drawable/google_button"
            tools:ignore="ContentDescription"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/other_login_title"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline"/>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline">

        <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
            android:id="@+id/forgotPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="13sp"/>

        <TextView
                android:id="@+id/txtResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/forgot_password_2"
                android:textSize="13sp"
                android:textStyle="bold"/>
    </LinearLayout>

    <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:text="@string/btn_login"
            android:background="#c6c1b4"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordLayout"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="13sp"/>

        <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/signup_2"
                android:textSize="13sp"
                android:textStyle="bold"/>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
            android:visibility="gone"
            android:clickable="true"
            android:id="@+id/loadingView"
            android:elevation="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#f7f4ee"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/loading_text"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>